--- a/Day001_HW.ipynb
+++ b/Day001_HW.ipynb
@@ -2,7 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1.簡答\n",
+    "\n",
+    "檔案:將資料以「CSV」、「JSON」...等標準格式包起來提供下載。\n",
+    "API:可視為應用程式之間溝通的窗口,使用者可以選擇資料中要讀取的特定部分，不需完整下載。\n",
+    "爬蟲:利用程式抓取網頁內容,並篩選所需之特定內容。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -15,6 +28,8 @@
     }
    ],
    "source": [
+    "# 2.實作\n",
+    "\n",
     "from urllib.request import urlretrieve\n",
     "import os\n",
     "\n",
