--- a/Day004_HW.ipynb
+++ b/Day004_HW.ipynb
@@ -1532,8 +1532,8 @@
     "\n",
     "json.loads(r.text)\n",
     "\n",
-    "# 「r.text」讀出來的資料全部都印在同一行\n",
-    "# json.loads(r.text)」讀出來的是用json格式,有分行印出,較容易閱讀"
+    "# 「r.text」讀出來的資料是全部都印在同一行的字串\n",
+    "# json.loads(r.text)」讀出來的資料有分行印出,較容易閱讀"
    ]
   },
   {
@@ -1598,14 +1598,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "RPISC-Y4UdOq"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'error': {'code': '',\n",
+       "  'message': \"No HTTP resource was found that matches the request URI 'http://wrisp2:88/odata/dataset/RealtimeWaterLevel'.\"}}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import json\n",
+    "\n",
+    "# get\n",
+    "# r1 = requests.get('http://odata.wra.gov.tw/v4/RealtimeWaterLevel', params = {'key':'value'})\n",
+    "# json.loads(r1.text)\n",
+    "\n",
+    "# post\n",
+    "r2 = requests.post('http://odata.wra.gov.tw/v4/RealtimeWaterLevel', data = {'key':'value'})\n",
+    "json.loads(r2.text)"
+   ]
   },
   {
    "cell_type": "code",
