--- a/Day007_HW.ipynb
+++ b/Day007_HW.ipynb
@@ -34,9 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 資料包大,傳輸速度慢,且有安全性的問題\n",
-    "\n",
-    "傳統的 HTTP 機制都是一個 Request 搭配一個 Response，如果畫面上一個小改變可能就需要重新發送 Request 並處理 Response。舉個例子：如果我的畫面上有很多張圖片，但只是想要改變一個小部分，但每次操作都必須全部圖片重新載入。"
+    "資料包大,傳輸速度慢,且有安全性的問題"
    ]
   },
   {
@@ -52,9 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Python通過thread包支援多執行緒,而JavaScript所有的程式都執行在一個執行緒中\n",
-    "\n",
-    "JavaScipt 是執行在網頁瀏覽器上，Python 是執行在電腦的作業系統上。"
+    "Python通過thread包支援多執行緒,而JavaScript所有的程式都執行在一個執行緒中"
    ]
   },
   {
