--- a/Day006_HW改.ipynb
+++ b/Day006_HW改.ipynb
@@ -77,17 +77,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "第一筆回答的時間: 1557824412\n",
-      "最後一筆回答的時間 1551238885\n",
-      "2019-05-14 17:00:12\n",
-      "2019-02-27 11:41:25\n"
+      "第一筆回答的時間: 2019-05-14 17:00:12\n",
+      "最後一筆回答的時間 2019-02-27 11:41:25\n"
      ]
     }
    ],
@@ -99,13 +97,13 @@
     "for d in data['data']:\n",
     "    latest_answer_time = d['created_time']\n",
     "\n",
-    "print(\"第一筆回答的時間:\",first_answer_time)\n",
-    "print(\"最後一筆回答的時間\",latest_answer_time)\n",
+    "# print(\"第一筆回答的時間:\",first_answer_time)\n",
+    "# print(\"最後一筆回答的時間\",latest_answer_time)\n",
     "\n",
     "first_answer_time_date = datetime.fromtimestamp(first_answer_time)\n",
-    "print(first_answer_time_date)\n",
+    "print(\"第一筆回答的時間:\",first_answer_time_date)\n",
     "latest_answer_time_date = datetime.fromtimestamp(latest_answer_time)\n",
-    "print(latest_answer_time_date)"
+    "print(\"最後一筆回答的時間\",latest_answer_time_date)"
    ]
   },
   {
