--- a/Day003_HW.ipynb
+++ b/Day003_HW.ipynb
@@ -70,7 +70,7 @@
     "print(doc)\n",
     "\n",
     "# File I/O 讀出來的是 xml檔案格式\n",
-    "# xmltodict 讀出來的是 dictionary的資料型態"
+    "# xmltodict 讀出來的是 JSON 檔案格式"
    ]
   },
   {
