--- a/Day001_HW.ipynb
+++ b/Day001_HW.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "# 下載檔案到 Data 資料夾，存成檔名 Homework.txt\n",
     "try:\n",
-    "    os.makedirs( './Data', exist_ok=True )\n",
+    "    os.makedirs( './Data', exist_ok=True ) # 建立Data資料夾\n",
     "    urlretrieve (\"https://www.w3.org/TR/PNG/iso_8859-1.txt\", \"./data/Homework.txt\")\n",
     "except:\n",
     "    print('發生錯誤！')\n",
