--- a/Day008_HW.ipynb
+++ b/Day008_HW.ipynb
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -174,8 +174,7 @@
     }
    ],
    "source": [
-    "from bs4 import BeautifulSoup\n",
-    "soup = BeautifulSoup(r.text)\n",
+    "url = 'https://www.zhihu.com/explore'\n",
     "\n",
     "headers= {\n",
     "    \"User-Agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/80.0.3987.122 Safari/537.36\"\n",
