--- a/Day010_HW.ipynb
+++ b/Day010_HW.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
       "<!doctype html><html itemscope=\"\" itemtype=\"http:/\n",
       "<class 'str'> \n",
       "\n",
-      "<class 'bs4.BeautifulSoup'>\n"
+      "<class 'bs4.element.Tag'> Google\n"
      ]
     }
    ],
@@ -57,10 +57,9 @@
     "\n",
     "from bs4 import BeautifulSoup\n",
     "soup = BeautifulSoup(r.text)\n",
-    "# print(soup)\n",
-    "print(type(soup))\n",
+    "print(type(soup.title), soup.title.text)\n",
     "\n",
-    "# BeautifulSoup會自動進行解析並產生一個 'BeautifulSoup 物件'"
+    "# BeautifulSoup解析出 soup.title是一個 HTML的標籤"
    ]
   },
   {
@@ -72,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +96,6 @@
     "\n",
     "from pyquery import PyQuery as pq\n",
     "doc = pq(resp.body)\n",
-    "# print(doc)\n",
     "title = doc('title')\n",
     "print(type(title), title.text())\n",
     "\n",
